bk_ida/gobmkida/c1/owl_add_move
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_add_move/src/engine/owl.c:3785:18: error: expected expression
v15 = *( _OWORD *)&v14->pos; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_add_move/src/engine/owl.c:3785:10: error: use of undeclared identifier '_OWORD'
v15 = *( _OWORD *)&v14->pos; 
         ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_add_move/src/engine/owl.c:3786:12: error: expected expression
*( _OWORD *)&v11->same_dragon = *( _OWORD *)&v14->same_dragon; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_add_move/src/engine/owl.c:3786:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v11->same_dragon = *( _OWORD *)&v14->same_dragon; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_add_move/src/engine/owl.c:3786:44: error: expected expression
*( _OWORD *)&v11->same_dragon = *( _OWORD *)&v14->same_dragon; 
                                           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_add_move/src/engine/owl.c:3786:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v11->same_dragon = *( _OWORD *)&v14->same_dragon; 
                                   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_add_move/src/engine/owl.c:3787:12: error: expected expression
*( _OWORD *)&v11->pos = v15; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_add_move/src/engine/owl.c:3787:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v11->pos = v15; 
   ^
8 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/owl_add_move/src/obj/1/owl.o] Error 1
